<resources>
    <string name="app_name">VTubPedia</string>
    <string name="vtuber_name">vtuber name</string>
    <string name="agency">agency/perusahaan</string>
    <string name="description">Deskripsi</string>
    <string name="my_name">Yusman</string>
    <string name="my_email">yusmnn@gmail.com</string>
    <string name="twitter">(x)Twitter</string>
    <string name="linkedin">Linked In</string>
    <string name="github">Github</string>
    <string name="my_twitter">\@yusmnn</string>
    <string name="my_linkedin">\@yusmnn</string>
    <string name="my_github">\@yusmnn</string>
    <string name="profile">https://i.postimg.cc/VvcXBwGy/img-profile.jpg</string>
    <string-array name="data_name">
        <item>Kobo Kanaeru</item>
        <item>Vestia Zeta</item>
        <item>Kaela Kovalskia</item>
        <item>Nekoyama Sena</item>
        <item>Ayunda Risu</item>
        <item>Moona Hoshinova</item>
        <item>IpoChan</item>
        <item>Mythia Batford</item>
        <item>Airani Iofifteen</item>
        <item>Aika Meru</item>
    </string-array>
    <string-array name="data_agency">
        <item>Hololive</item>
        <item>Hololive</item>
        <item>Hololive</item>
        <item>Yume Reality</item>
        <item>Hololive</item>
        <item>Hololive</item>
        <item>Independen</item>
        <item>Independen</item>
        <item>Hololive</item>
        <item>Yume Reality</item>
    </string-array>
    <string name="question">How Do You Feel About This Article?</string>
    <string name="greeting">😊</string>
    <string name="love">💖</string>
    <string name="sad">🥺</string>
    <string name="count">13</string>
</resources>