<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none"
    tools:context=".DetailVtuber">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">

         <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">


                 <ImageView
                     android:id="@+id/img_item_photo"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:scaleType="centerCrop"
                     tools:src="@tools:sample/avatars" />

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="16dp">


                     <TextView
                         android:id="@+id/tv_item_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/vtuber_name"
                         android:textAppearance="?attr/textAppearanceTitleMedium"
                         android:textSize="24dp"
                         android:textStyle="bold" />

                     <TextView
                         android:id="@+id/tv_item_agency"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="@string/agency"
                         android:textAppearance="?attr/textAppearanceBodyMedium"
                         android:textColor="?android:attr/textColorSecondary"
                         android:textSize="18dp"
                         android:textStyle="bold" />

                     <TextView
                         android:id="@+id/tv_item_description"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="start|end"
                         android:layout_marginTop="10dp"
                         android:text="@string/description"
                         android:textAppearance="?attr/textAppearanceBodyMedium"
                         android:textColor="?android:attr/textColorSecondary" />

                 </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>


     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="0dp"
         android:gravity="center"
         android:text="@string/question"
         android:textSize="16dp"
         android:textStyle="bold"
         android:visibility="visible" />

     <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:columnCount="3"
             android:rowCount="1"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="16dp">

             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
                 android:layout_column="0"
                 android:layout_columnWeight="1">

                 <TextView
                     android:id="@+id/love_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="@string/love"
                     android:textSize="40dp" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/love_icon"
                     android:layout_marginTop="18dp"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     android:layout_centerHorizontal="true"
                     android:text="@string/count" />

             </RelativeLayout>

             <RelativeLayout
                 android:layout_width="1dp"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
                 android:layout_column="1"
                 android:layout_columnWeight="4">

                 <TextView
                     android:id="@+id/greeting_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="@string/greeting"
                     android:textSize="40dp" />


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/greeting_icon"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="18dp"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     android:text="@string/count" />

             </RelativeLayout>

             <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_row="0"
                 android:layout_column="2"
                 android:layout_columnWeight="1">

                 <TextView
                     android:id="@+id/sad_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:text="@string/sad"
                     android:textSize="40dp" />


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/sad_icon"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="18dp"
                     android:textSize="14dp"
                     android:textStyle="bold"
                     android:text="@string/count" />

             </RelativeLayout>

         </GridLayout>

 </LinearLayout>
</ScrollView>