<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".About">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:padding="20dp"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/my_name">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_email"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="18sp">
    </TextView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/github_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/github"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_github"
                android:layout_below="@id/github_icon"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/twitter_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/twitter"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_twitter"
                android:layout_below="@id/twitter_icon"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1">

            <ImageView
                android:id="@+id/linkedin_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/linkedin"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_linkedin"
                android:layout_below="@id/linkedin_icon"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

    </GridLayout>


</LinearLayout>






    <!--    <TableLayout-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:stretchColumns="1">-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_width="107dp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="start"-->
    <!--                android:gravity="start"-->
    <!--                android:paddingEnd="8dp"-->
    <!--                android:text="@string/linkedin"-->
    <!--                android:textSize="18sp" />-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:autoLink="web"-->
    <!--                android:text="@string/my_linkedin"-->
    <!--                android:textColorLink="@color/black"-->
    <!--                android:textSize="18sp" />-->
    <!--        </TableRow>-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_width="107dp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="start"-->
    <!--                android:gravity="start"-->
    <!--                android:paddingEnd="8dp"-->
    <!--                android:text="@string/github"-->
    <!--                android:textSize="18sp" />-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:autoLink="web"-->
    <!--                android:text="@string/my_github"-->
    <!--                android:textColorLink="@color/black"-->
    <!--                android:textSize="18sp" />-->
    <!--        </TableRow>-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_width="107dp"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="start"-->
    <!--                android:gravity="start"-->
    <!--                android:paddingEnd="8dp"-->
    <!--                android:text="@string/twitter"-->
    <!--                android:textSize="18sp" />-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:autoLink="web"-->
    <!--                android:text="@string/my_twitter"-->
    <!--                android:textColorLink="@color/black"-->
    <!--                android:textSize="18sp" />-->
    <!--        </TableRow>-->

    <!--        <TableRow>-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_gravity="start"-->
    <!--                android:paddingEnd="8dp"-->
    <!--                android:text="@string/instagram"-->
    <!--                android:textSize="18sp" />-->

    <!--            <TextView-->
    <!--                android:layout_width="wrap_content"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:autoLink="web"-->
    <!--                android:text="@string/my_instagram"-->
    <!--                android:textColorLink="@color/black"-->
    <!--                android:textSize="18sp" />-->
    <!--        </TableRow>-->

    <!--    </TableLayout>-->